# meld

./: .gitignore  Makefile  Makefile.am  autogen.sh  configure.ac
help/: .gitignore  Makefile.am  meld.omf.in
m4/: as-ac-expand.m4
meld/: conf.py  defs.py.in  dirdiff.py  filediff.py  meldwindow.py  patchdialog.py  preferences.py  vcview.py
meld/ui/: findbar.py  gnomeglade.py
